# rinova

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  start.sh
.opencode/: session-summary.md
backend_rust/: .dockerignore  .env.example  Cargo.toml  Dockerfile.gateway  Dockerfile.service
backend_rust/.sqlx/: query-286bb7e037999734de991d716fb86fae22870864b1a53a48624dceb52536b3d4.json  query-46ee55501c6e8062a0f72b564343fde8c406b8db8556eb1578c5370ba51fb184.json  query-4ff537ebb675ffa2513a42d052c80d258b3f67034755ed5055b3401eb35dfe89.json  query-5209d924151538d1e3e5eafcf920c8c076ffe9e2e760dfeae79c092752fc9c73.json  query-60b55d1e94347c946a1520a04847c6f260f05e2eb7f915667786eae5e6e0de1b.json  query-78daf2b6d340ef5c919c5e51246c5b9ddaa58023ed5dfa70d228a470702f7a97.json  query-8938ce1bf176fd3b2d193be23e1411b6db3097ceee6970c17d4163a619707625.json  query-8f28f65b674ef02853218c8ee0ec79dd8edc908794a14df95edbf85afc011dd3.json  query-9814c382b8906f5bf81ec6a77ba9d1d37c135619114f496c1c0dcc4c44ac5019.json  query-9daf74b1e4babee4be576e44ebdb1edd123387811d76cb305957cb7105dff0c1.json  query-aaff9adbea64cf8588b923516917eb25d530eb5e7118d8da5c09c6fce3035f4f.json  query-b2bd958b77617086cc9521056fd244615d6df72b5e5b5bfbf37ed6c537d29f27.json  query-d2f90eb2940c15e3ec601c1bd29ca736b526f4ee03b94f394a36eb58ddc5074b.json  query-dc5f8b34d907e258d5b0239fdcff5f4b0cb8b8bafbcd2deed3a7496329c690f5.json  query-f2a6d69a7eb4947e9fed47bf4df83d69b0ce8bc99eeb65a8b815309098e55814.json  query-f442f6d91f9be177d0d6ddb900fee44c6397c50849e199c01e26994e27c8fd46.json  query-f7c86dcceaeebb964cc182e4d7f585ab4d7ee16801617372d25bbd4cf44ccf3b.json  query-fa78a5f2d629f7fc80d0554287c2163fb0da9cfb80d82133e3442339d46c25dc.json  query-fb98853f4cfb18d467f8c9519f55a540c87de7cad202b4ad83af2a72ab5766de.json
backend_rust/docker/rust_service/: Dockerfile
backend_rust/libs/database/: Cargo.toml
backend_rust/libs/database/migrations/: 20240115000001_create_users_workspaces.sql  20240115000002_create_subscriptions.sql  20240115000003_create_projects.sql  20240115000004_add_workspace_to_subscriptions.sql
backend_rust/libs/database/src/: lib.rs  mongodb_client.rs  postgres.rs  redis_client.rs
backend_rust/libs/messaging/: Cargo.toml
backend_rust/libs/messaging/src/: lib.rs  zmq_publisher.rs
backend_rust/libs/proto/: build.rs
backend_rust/libs/proto/proto/: blockchain.proto
backend_rust/libs/proto/src/: lib.rs
backend_rust/libs/shared/: Cargo.toml
backend_rust/libs/shared/src/: errors.rs  lib.rs  types.rs  utils.rs
backend_rust/migrations/: 20250118_000001_create_users_table.sql  20250118_000002_create_workspaces_table.sql  20250118_000003_create_workspace_members_table.sql  20250118_000004_add_row_level_security.sql  run_migrations.sh
backend_rust/services/analytics_service/: Cargo.toml
backend_rust/services/analytics_service/src/handlers/: analytics_handler.rs
backend_rust/services/analytics_service/src/models/: analytics.rs  mod.rs
backend_rust/services/api_gateway/: Cargo.toml
backend_rust/services/api_gateway/src/: main.rs
backend_rust/services/api_gateway/src/config/: mod.rs
backend_rust/services/api_gateway/src/middleware/: auth.rs  mod.rs  rate_limit.rs
backend_rust/services/api_gateway/src/proxy/: mod.rs  proxy_service.rs
backend_rust/services/blockchain_service/: Cargo.toml
backend_rust/services/blockchain_service/src/: grpc.rs  main.rs
backend_rust/services/blockchain_service/src/handlers/: audit_handler.rs  mod.rs  ownership_handler.rs  subscription_handler.rs
backend_rust/services/blockchain_service/src/models/: audit_trail.rs  mod.rs  ownership.rs  subscription_record.rs
backend_rust/services/blockchain_service/src/services/: blockchain_client.rs  hash_service.rs  mod.rs
backend_rust/services/marketplace_service/: Cargo.toml
backend_rust/services/marketplace_service/src/: main.rs
backend_rust/services/marketplace_service/src/handlers/: marketplace_handler.rs  mod.rs
backend_rust/services/marketplace_service/src/models/: marketplace.rs
backend_rust/services/notification_service/: Cargo.toml
backend_rust/services/notification_service/src/: main.rs
backend_rust/services/notification_service/src/handlers/: mod.rs  notification_handler.rs
backend_rust/services/notification_service/src/models/: event.rs  mod.rs  notification.rs
backend_rust/services/notification_service/src/services/: email_service.rs  mod.rs  notification_service.rs  notification_store.rs  ws_manager.rs
backend_rust/services/project_service/: Cargo.toml
backend_rust/services/project_service/src/: main.rs
backend_rust/services/project_service/src/handlers/: component_handler.rs  marketplace_handler.rs  mod.rs  project_handler.rs
backend_rust/services/project_service/src/models/: component.rs  mod.rs  project.rs  project_status.rs
backend_rust/services/project_service/src/repository/: component_repository.rs  marketplace_repository.rs  mod.rs  project_repository.rs
backend_rust/services/project_service/src/services/: mod.rs
backend_rust/services/publishing_service/: Cargo.toml
backend_rust/services/publishing_service/src/: main.rs
backend_rust/services/publishing_service/src/handlers/: domain_handler.rs  mod.rs  publish_handler.rs
backend_rust/services/publishing_service/src/models/: domain.rs  mod.rs  publish_job.rs
backend_rust/services/publishing_service/src/services/: build_service.rs  domain_service.rs  mod.rs  publish_service.rs
backend_rust/services/subscription_service/: Cargo.toml
backend_rust/services/subscription_service/src/: lib.rs  main.rs
backend_rust/services/subscription_service/src/handlers/: mod.rs  subscription_handler.rs
backend_rust/services/subscription_service/src/models/: feature_flags.rs  mod.rs  plan.rs  subscription.rs
backend_rust/services/user_service/: Cargo.toml
backend_rust/services/user_service/src/: main.rs  models.rs
backend_rust/services/workspace_service/: Cargo.toml
backend_rust/services/workspace_service/src/: main.rs
backend_rust/tests/: Cargo.toml  integration_tests.rs  property_tests.rs
docs/: API.md  (+1 more)
(+178 files in other folders)
