[workspace]
members = [
    "services/user_service",
    "services/subscription_service",
    "services/project_service",
    "services/publishing_service",
    "services/blockchain_service",
    "services/notification_service",
    "services/api_gateway",
    "libs/shared",
    "libs/database",
    "libs/messaging",
    "libs/blockchain",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Rinova Team"]
license = "MIT"

[workspace.dependencies]
# Web framework
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.6"
actix-service = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
mongodb = "2.8"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Authentication & Security
bcrypt = "0.15"
jsonwebtoken = "9.2"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Date & Time
chrono = { version = "0.4", features = ["serde"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
dotenv = "0.15"

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Email
lettre = { version = "0.11", features = ["tokio1-rustls-tls"] }

# ZeroMQ
zmq = "0.10"

# Blockchain
ethers = { version = "2.0", features = ["rustls"] }

# Testing
tokio-test = "0.4"
