[package]
name = "database"
version.workspace = true
edition.workspace = true

[dependencies]
sqlx = { workspace = true }
mongodb = { workspace = true }
redis = { workspace = true }
shared = { path = "../shared" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
