[package]
name = "shared"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true }
actix-web = { workspace = true }
sqlx = { workspace = true }
regex = "1.10"
