[package]
name = "blockchain_service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "blockchain_service"
path = "src/main.rs"

[dependencies]
actix-web.workspace = true
actix-cors.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-actix-web.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
dotenv.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
ethers.workspace = true
sha2 = "0.10"
hex = "0.4"
sqlx.workspace = true
validator.workspace = true
