[package]
name = "notification_service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "notification_service"
path = "src/main.rs"

[dependencies]
actix-web.workspace = true
actix-cors.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-actix-web.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
dotenv.workspace = true
