[package]
name = "project_service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "project_service"
path = "src/main.rs"

[dependencies]
actix-web.workspace = true
actix-cors.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-actix-web.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
dotenv.workspace = true
sqlx.workspace = true
mongodb.workspace = true
uuid.workspace = true
chrono.workspace = true
validator.workspace = true
anyhow.workspace = true
futures.workspace = true
