[package]
name = "subscription_service"
version.workspace = true
edition.workspace = true

[[bin]]
name = "subscription_service"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
actix-web = { workspace = true }
actix-rt = { workspace = true }
actix-cors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
jsonwebtoken = { workspace = true }
validator = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-actix-web = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
dotenv = { workspace = true }
reqwest = { workspace = true }

# Stripe SDK for payment integration
async-stripe = { workspace = true }

# Async utilities
futures = { workspace = true }

# gRPC client for blockchain service
tonic = { workspace = true }
prost = { workspace = true }
proto = { path = "../../libs/proto" }

# Local dependencies
shared = { path = "../../libs/shared" }
database = { path = "../../libs/database" }
messaging = { path = "../../libs/messaging" }
