[package]
name = "user_service"
version.workspace = true
edition.workspace = true

[[bin]]
name = "user_service"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
actix-web = { workspace = true }
actix-rt = { workspace = true }
actix-cors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
bcrypt = { workspace = true }
jsonwebtoken = { workspace = true }
validator = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-actix-web = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
dotenv = { workspace = true }
lettre = { workspace = true }

# Local dependencies
shared = { path = "../../libs/shared" }
database = { path = "../../libs/database" }
messaging = { path = "../../libs/messaging" }
